tests/specs/check/definitely_typed/type_mismatch.out
Check [WILDCARD]main.ts
TS2322 [ERROR]: Type 'number' is not assignable to type 'boolean'.
const _res: boolean = foo(1, 2);
      ~~~~
    at [WILDCARD]main.ts:3:7

error: Type checking failed.
